--- a/quarto/limits/continuity.qmd
+++ b/quarto/limits/continuity.qmd
@@ -76,6 +76,8 @@ This speaks to continuity at a point, we can extend this to continuity over an i
 
 Finally, as with limits, it can be convenient to speak of *right* continuity and *left* continuity at a point, where the limit in the definition is replaced by a right or left limit, as appropriate.
 
+In particular, a function is *continuous* over $[a,b]$ if it is continuous on $(a,b)$, left continuous at $b$ and right continuous at $a$.
+
 
 :::{.callout-warning}
 ## Warning
@@ -90,7 +92,7 @@ Most familiar functions are continuous everywhere.
 
 
   * For example, a monomial function $f(x) = ax^n$ for non-negative, integer $n$ will be continuous. This is because the limit exists everywhere, the domain of $f$ is all $x$ and there are no jumps.
-  * Similarly, the basic trigonometric functions $\sin(x)$, $\cos(x)$ are continuous everywhere.
+  * Similarly, the building-block trigonometric functions $\sin(x)$, $\cos(x)$ are continuous everywhere.
   * So are the exponential functions $f(x) = a^x, a > 0$.
   * The hyperbolic sine ($(e^x - e^{-x})/2$) and cosine ($(e^x + e^{-x})/2$) are, as $e^x$ is.
   * The hyperbolic tangent is, as $\cosh(x) > 0$ for all $x$.
@@ -103,7 +105,7 @@ Some familiar functions are *mostly* continuous but not everywhere.
   * Similarly, $f(x) = \log(x)$ is continuous on $(0,\infty)$, but it is not defined at $x=0$, so is not right continuous at $0$.
   * The tangent function $\tan(x) = \sin(x)/\cos(x)$ is continuous everywhere *except* the points $x$ with $\cos(x) = 0$ ($\pi/2 + k\pi, k$ an integer).
   * The hyperbolic co-tangent is not continuous at $x=0$ – when $\sinh$ is $0$,
-  * The semicircle $f(x) = \sqrt{1 - x^2}$ is *continuous* on $(-1, 1)$. It is not continuous at $-1$ and $1$, though it is right continuous at $-1$ and left continuous at $1$.
+  * The semicircle $f(x) = \sqrt{1 - x^2}$ is *continuous* on $(-1, 1)$. It is not continuous at $-1$ and $1$, though it is right continuous at $-1$ and left continuous at $1$. (It is continuous on $[-1,1]$.)
 
 
 ##### Examples of discontinuity
@@ -208,6 +210,13 @@ solve(del, c)
 ```
 
 This gives the value of $c$.
+
+
+This is a bit fussier than need be. As the left and right pieces (say, $f_l$ and $f_r$) as both are polynomials are continuous everywhere, so would have left and right limits given through evaluation. Solving for `c` as follows is enough:
+
+```{julia}
+solve(ex1(x=>0) ~ ex2(x=>0), c)
+```
 
 
 ## Rules for continuity
@@ -384,7 +393,7 @@ numericq(val)
 ###### Question
 
 
-Suppose $f(x)$, $g(x)$, and $h(x)$ are continuous functions on $(a,b)$. If $a < c < b$, are you sure that $lim_{x \rightarrow c} f(g(x))$ is $f(g(c))$?
+Suppose $f(x)$, $g(x)$, and $h(x)$ are continuous functions on $(a,b)$. If $a < c < b$, are you sure that $\lim_{x \rightarrow c} f(g(x))$ is $f(g(c))$?
 
 
 ```{julia}
@@ -453,7 +462,7 @@ yesnoq(true)
 ###### Question
 
 
-Let $f(x)$ and $g(x)$ be continuous functions whose graph of $[0,1]$ is given by:
+Let $f(x)$ and $g(x)$ be continuous functions. Their graphs over $[0,1]$ are given by:
 
 
 ```{julia}
